第二轮迭代优化：修复 P1/P2 问题共 6 项
P1 修复：
- P1-1: SpotBugs CT_CONSTRUCTOR_THROW 排除（JoinGroup/OrGroup/OrJoinGroup）
- P1-2: ProjectionSpec.JoinGroup 实现 ConditionBuilder 接口，消除约 300 行重复代码
- P1-3: 通过实现 ConditionBuilder 自动获得 in(Collection)/notIn(Collection) 等缺失方法
- P1-4: MyJpaPlusAutoConfiguration 添加 Java 17+ 模块兼容性启动检测

P2 修复：
- P2-2: like()/notLike() 添加 @Deprecated 标记，指向安全替代方法
- P2-4: SubQuerySpec 构造函数添加 4 个参数的 null 校验

全部 592 个测试通过，Spotless 格式化已应用。