@@ -4,6 +4,8 @@ import com.zsubera.jpa.repository.SoftDeleteJpaRepository;
 import com.zsubera.jpa.template.MyJpaTemplate;
 import com.zsubera.jpa.util.LambdaUtils;
 import jakarta.persistence.EntityManager;
+import java.lang.invoke.SerializedLambda;
+import java.lang.reflect.Method;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.boot.autoconfigure.AutoConfiguration;
@@ -42,6 +44,7 @@ public class MyJpaPlusAutoConfiguration {
     public MyJpaPlusAutoConfiguration(MyJpaPlusProperties properties) {
         // 将 auto-filter 配置同步到 SoftDeleteJpaRepository 的静态标志，确保 Repository 层面行为一致
         SoftDeleteJpaRepository.setAutoFilterEnabled(properties.getSoftDelete().isAutoFilter());
+        checkModuleCompatibility();
         if (log.isInfoEnabled()) {
             log.info("MyJpa-Plus AutoConfiguration initialized");
             log.info("  soft-delete.auto-filter = {}", properties.getSoftDelete().isAutoFilter());
@@ -79,5 +82,27 @@ public class MyJpaPlusAutoConfiguration {
     public void onContextClosed(ContextClosedEvent event) {
         LambdaUtils.shutdown();
         log.info("MyJpa-Plus context closed (LambdaUtils.shutdown is no-op with LRU cache)");
+    }
+
+    /**
+     * 检测 Java 17+ 模块系统兼容性。
+     *
+     * <p>
+     * LambdaUtils 通过反射调用 {@code SerializedLambda.writeReplace()} 并使用 {@code setAccessible(true)}。 在 Java 17+
+     * 的强封装模块系统下，此操作可能因缺少 {@code --add-opens} 参数而失败。 此方法在启动时检测并给出明确的警告信息。
+     */
+    private static void checkModuleCompatibility() {
+        try {
+            Method writeReplace = SerializedLambda.class.getDeclaredMethod("writeReplace");
+            writeReplace.setAccessible(true);
+        } catch (NoSuchMethodException e) {
+            // 不可能发生：writeReplace 是 SerializedLambda 的固有方法
+            log.warn("Unexpected: SerializedLambda.writeReplace() not found. LambdaUtils may not work correctly.");
+        } catch (SecurityException e) {
+            log.warn(
+                "Java module system restriction detected. LambdaUtils uses reflection on SerializedLambda.writeReplace() "
+                    + "which may fail at runtime. If you encounter InaccessibleObjectException, add this JVM argument: "
+                    + "--add-opens java.base/java.lang.invoke=ALL-UNNAMED");
+        }
     }
 }
